<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.victriasapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnichordstwo"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_132pxv"
        android:layout_marginEnd="@dimen/_16pxh"
        android:layout_marginStart="@dimen/_16pxh"
        android:layout_marginTop="@dimen/_58pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblue_50">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearLogin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageIchordsTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_52pxh"
                    android:layout_marginEnd="@dimen/_42pxh"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_width="@dimen/_224pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_ichords2"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ichords2"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtCompartilheas"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_41pxh"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtCompartilheas}"
                    style="@style/txtIntersemibold14_1" tools:text="@string/msg_compartilhe_a_s"/>
                <EditText
                    android:background="@drawable/rectangle_bg_teal_50_border_blue_800_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etFrameNine"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_58pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etFrameNineValue}"
                    android:textColorHint="@color/gray_700"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_blue_800_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_senha"
                    android:id="@+id/etFrameTen"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etFrameTenValue}"
                    android:textColorHint="@color/gray_700"
                    style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEsqueceuasenh"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtEsqueceuasenh}"
                    style="@style/txtIntermedium13" tools:text="@string/msg_esqueceu_a_senh"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnEntrar"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_entrar"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_entrar"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOucontinuecom"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtOucontinuecom}"
                    style="@style/txtPoppinssemibold14" tools:text="@string/lbl_ou_continue_com"/>
                <EditText
                    android:background="@drawable/rectangle_bg_blue_a400_radius_8"
                    android:drawablePadding="@dimen/_8pxh"
                    android:drawableStart="@drawable/drawable_img_path14"
                    android:ellipsize="end"
                    android:hint="@string/msg_continue_with_f"
                    android:id="@+id/etContinuewithF"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etContinuewithFValue}"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_radius_8"
                    android:drawablePadding="@dimen/_8pxh"
                    android:drawableStart="@drawable/drawable_img_logo_googleg_48dp"
                    android:ellipsize="end"
                    android:hint="@string/msg_continue_with_g"
                    android:id="@+id/etContinuewithG"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etContinuewithGValue}"
                    android:textColorHint="@color/black_900_89"
                    style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_black_900_radius_8"
                    android:drawablePadding="@dimen/_8pxh"
                    android:drawableStart="@drawable/drawable_img_path4"
                    android:ellipsize="end"
                    android:hint="@string/msg_continue_with_a"
                    android:id="@+id/etContinuewithA"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etContinuewithAValue}"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
